--- a/operation/roles/prometheus/defaults/main.yml
+++ b/operation/roles/prometheus/defaults/main.yml
@@ -1,9 +1,10 @@
 ---
 namespace: monitoring
 prometheus_version: 8.14.0
-remote_helm_directory: "/home/{{ ansible_user }}/helm"
+remote_directory: "/home/{{ ansible_user }}"
 helm_binary_path: /usr/local/bin/helm
 deploy_prometheus: yes
+create_dashboard: yes
 prometheus_crds_url:
 - https://raw.githubusercontent.com/coreos/prometheus-operator/release-0.38/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
 - https://raw.githubusercontent.com/coreos/prometheus-operator/release-0.38/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
