--- a/charts/stable/scalar-envoy/templates/service.yaml
+++ b/charts/stable/scalar-envoy/templates/service.yaml
@@ -13,3 +13,19 @@ spec:
   {{- end }}
   selector:
     {{- include "scalar-envoy.selectorLabels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "scalar-envoy.fullname" . }}-metrics
+  labels:
+    {{- include "scalar-envoy.labels" . | nindent 4 }}
+spec:
+  ports:
+  - name: admin
+    port: 9001
+    protocol: TCP
+    targetPort: 9001
+  selector:
+    {{- include "scalar-envoy.selectorLabels" . | nindent 4 }}
+  type: ClusterIP
