--- a/charts/stable/scalar-ledger/Chart.yaml
+++ b/charts/stable/scalar-ledger/Chart.yaml
@@ -1,9 +1,10 @@
-apiVersion: v1
-appVersion: "1.0"
+apiVersion: v2
+name: scalar-ledger
+type: application
+version: 1.0.0
+appVersion: 2.0.7
 deprecated: false
 description: A Helm chart for Kubernetes Scalar Ledger
-name: scalar-ledger
-version: 0.1.0
 icon: https://scalar-labs.com/wp-content/themes/scalar/assets/img/logo_scalar.svg
 keywords:
 - ledger
