--- a/charts/stable/scalar-envoy/values.yaml
+++ b/charts/stable/scalar-envoy/values.yaml
@@ -49,7 +49,7 @@ securityContext: {}
   # runAsUser: 1000
 service:
   # service.type -- service types in kubernetes
-  type: Loadbalancer
+  type: LoadBalancer
   # service.annotations -- Service annotations, e.g: prometheus, etc.
   annotations: {}
   ports:
@@ -57,14 +57,14 @@ service:
       # service.ports.envoy.port -- envoy public port
       port: 50051
       # service.ports.envoy.targetPort -- envoy k8s internal name
-      targetPort: envoy
+      targetPort: 50051
       # service.ports.envoy.protocol -- envoy protocol
       protocol: TCP
     envoy-priv:
       # service.ports.envoy-priv.port -- nvoy public port
       port: 50052
       # service.ports.envoy-priv.targetPort -- envoy k8s internal name
-      targetPort: envoy-priv
+      targetPort: 50052
       # service.ports.envoy-priv.protocol -- envoy protocol
       protocol: TCP
 
