--- a/operation/roles/scalardl/defaults/main.yml
+++ b/operation/roles/scalardl/defaults/main.yml
@@ -5,3 +5,5 @@ docker_registry: "https://index.docker.io/v2/"
 docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
 docker_password: "{{ lookup('env','DOCKERHUB_ACCESS_TOKEN') }}"
 kubernetes_registry_secret_name: "reg-docker-secrets"
+job_scalardl_schema_name: scalardl-schema
+job_scalardl_schema_version: v2.0.7
