--- a/operation/roles/scalardl/tasks/envoy.yml
+++ b/operation/roles/scalardl/tasks/envoy.yml
@@ -1,7 +1,7 @@
 ---
 - name: Get files on remote machine for envoy
   find:
-    paths: "{{ remote_manifests_folder }}/envoy/"
+    paths: "{{ remote_manifests_directory }}/envoy/"
     patterns: '*.yaml'
   register: find_yaml_envoy
 
