--- a/operation/roles/scalardl/tasks/ledger.yml
+++ b/operation/roles/scalardl/tasks/ledger.yml
@@ -1,7 +1,7 @@
 ---
 - name: Get files on remote machine for Scalar-ledger
   find:
-    paths: "{{ remote_manifests_folder }}/ledger/"
+    paths: "{{ remote_manifests_directory }}/ledger/"
     patterns: '*.yaml'
   register: find_yaml_ledger
 
