--- a/operation/roles/prometheus/files/envoy.yaml
+++ b/operation/roles/prometheus/files/envoy.yaml
@@ -2,9 +2,10 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   labels:
-    prometheus: example
-    role: alert-rules
-  name: prometheus-envoy-alerts-rules
+    app: prometheus-operator
+    release: prometheus
+  name: prometheus-prometheus-envoy-alerts-rules
+  namespace: monitoring
 spec:
   groups:
   - name: Envoy Alerts
