--- a/benchmark/kelpie-only-pre.yaml
+++ b/benchmark/kelpie-only-pre.yaml
@@ -2,16 +2,14 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   labels:
-    app.kubernetes.io/name: scalar-kelpie
-  name: scalar-kelpie
+    app.kubernetes.io/name: scalar-kelpie-import
+  name: scalar-kelpie-import
 spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: scalar-kelpie
+        app.kubernetes.io/name: scalar-kelpie-import
     spec:
-      imagePullSecrets:
-      - name: reg-docker-secrets
       containers:
       - name: kelpie-import
         image: <user>/kelpie:latest
@@ -31,16 +29,4 @@ spec:
           name: kelpie-config
         name: kelpie-config
       restartPolicy: Never
-      affinity:
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - podAffinityTerm:
-              labelSelector:
-                matchExpressions:
-                - key: app.kubernetes.io/name
-                  operator: In
-                  values:
-                  - scalar-kelpie
-              topologyKey: kubernetes.io/hostname
-            weight: 50
   backoffLimit: 0
