--- a/operation/manifests/prometheus/envoy-prometheus-rules.yaml
+++ b/operation/manifests/prometheus/envoy-prometheus-rules.yaml
@@ -10,13 +10,6 @@ spec:
   groups:
   - name: EnvoyAlerts
     rules:
-    - alert: EnvoyPodsError
-      expr: kube_pod_status_phase{namespace="default", pod=~"^scalar-envoy-.*", phase!="Running"} > 0
-      labels:
-        severity: warning
-      annotations:
-        summary: "One or many Envoy pods are in errors"
-        description: "The Envoy container on {{ $labels.pod }} have an error."
     - alert: EnvoyDeploymentHasMissingReplicas
       expr: kube_deployment_status_replicas_unavailable{namespace="default", deployment="scalar-envoy"} > 0
       for: 5m
@@ -25,6 +18,7 @@ spec:
       annotations:
         summary: '{{$labels.deployment}}: has insuficient replicas.'
         description: 'deployment {{$labels.deployment}} has {{$value}} replicas unavailable'
+    
     - alert: EnvoyPodsPending
       expr: kube_pod_status_phase{namespace="default", pod=~"^scalar-envoy-.*", phase="Pending"} > 0
       for: 5m
@@ -33,11 +27,12 @@ spec:
       annotations:
         description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has been in pending status for more than 5 minutes'
         summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in pending status'
-    - alert: EnvoyPodsErrImagePull
-      expr: kube_pod_container_status_waiting_reason{namespace="default", pod=~"^scalar-envoy-.*", reason="ErrImagePull"} > 0
+    
+    - alert: EnvoyPodsError
+      expr: kube_pod_container_status_waiting_reason{namespace="default",reason!="ContainerCreating",pod=~"^scalar-envoy-.*"} > 0
       for: 1m
       labels:
         severity: warning
       annotations:
-        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an Image pull error for more than 1 minutes'
+        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an Error for more than 1 minutes'
         summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in error status'
