--- a/operation/roles/prometheus/tasks/copy.yml
+++ b/operation/roles/prometheus/tasks/copy.yml
@@ -8,5 +8,8 @@
 - name: Copy file on remote server
   copy:
     src: files/prometheus-custom-values.yaml
-    dest: "{{ remote_directory }}/helm/prometheus-custom-values.yaml"
+    dest: "{{ remote_directory }}/helm/{{ item }}"
     remote_src: no
+  loop:
+  - prometheus-custom-values.yaml
+  - prometheus-custom-values-alertmanager.yaml
