--- a/operation/roles/prometheus/files/prometheus-custom-values.yaml
+++ b/operation/roles/prometheus/files/prometheus-custom-values.yaml
@@ -128,6 +128,7 @@ prometheus:
   prometheusSpec:
     resources: {}
     serviceMonitorSelectorNilUsesHelmValues: false
+    ruleSelectorNilUsesHelmValues: false
     storageSpec:
       volumeClaimTemplate:
         spec:
