add schedule for external terraform modules

--- a/.github/workflows/azure_monitor_example.yml
+++ b/.github/workflows/azure_monitor_example.yml
@@ -1,5 +1,7 @@
 name: Terraform test for Monitor module of Azure Example
 on:
+  schedule:
+    - cron: 0 15 * * *
   pull_request:
     branches:
       - master
