--- a/operation/roles/prometheus/tasks/copy.yml
+++ b/operation/roles/prometheus/tasks/copy.yml
@@ -5,11 +5,8 @@
     state: directory
     mode: '0755'
 
-- name: Copy file on remote server
-  copy:
-    src: files/prometheus-custom-values.yaml
-    dest: "{{ remote_directory }}/helm/{{ item }}"
+- name: Template file on remote server
+  template:
+    src: prometheus-custom-values.yaml.j2
+    dest: "{{ remote_directory }}/helm/prometheus-custom-values.yaml"
     remote_src: no
-  loop:
-  - prometheus-custom-values.yaml
-  - prometheus-custom-values-alertmanager.yaml
