--- a/operation/manifests/prometheus/envoy-prometheus-rules.yaml
+++ b/operation/manifests/prometheus/envoy-prometheus-rules.yaml
@@ -26,7 +26,7 @@ spec:
         severity: warning
       annotations:
         summary: '{{$labels.deployment}}: has insuficient replicas.'
-        description: 'deployment {{$labels.deployment}} has {{$value}} replicas unavailable'
+        description: 'deployment {{$labels.deployment}} has {{$value}} replica(s) unavailable'
     
     - alert: EnvoyPodsPending
       expr: kube_pod_status_phase{namespace="default", pod=~"^scalar-envoy-.*", phase="Pending"} > 0
@@ -34,7 +34,7 @@ spec:
       labels:
         severity: warning
       annotations:
-        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has been in pending status for more than 5 minutes'
+        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has been in pending status for more than 5 minutes.'
         summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in pending status'
     
     - alert: EnvoyPodsError
@@ -43,5 +43,5 @@ spec:
       labels:
         severity: warning
       annotations:
-        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an Error for more than 1 minutes'
-        summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in error status'
+        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an Error for more than 1 minutes.'
+        summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an error status'
