--- a/operation/manifests/prometheus/ledger-prometheus-rules.yaml
+++ b/operation/manifests/prometheus/ledger-prometheus-rules.yaml
@@ -16,8 +16,8 @@ spec:
       labels:
         severity: critical
       annotations:
-        summary: '{{$labels.deployment}}: has no replicas.'
-        description: 'deployment {{$labels.deployment}} has {{$value}} replicas'
+        summary: '{{$labels.deployment}}: has no replicas'
+        description: 'deployment {{$labels.deployment}} has {{$value}} replicas.'
         
     - alert: LedgerDeploymentHasMissingReplicas
       expr: kube_deployment_status_replicas_unavailable{namespace="default", deployment="scalar-ledger"} > 0
@@ -25,8 +25,8 @@ spec:
       labels:
         severity: warning
       annotations:
-        summary: '{{$labels.deployment}}: has insuficient replicas.'
-        description: 'deployment {{$labels.deployment}} has {{$value}} replicas unavailable'
+        summary: '{{$labels.deployment}}: has insuficient replicas'
+        description: 'deployment {{$labels.deployment}} has {{$value}} replica(s) unavailable.'
     
     - alert: LedgerPodsPending
       expr: kube_pod_status_phase{namespace="default", pod=~"^scalar-ledger-.*", phase="Pending"} > 0
@@ -34,7 +34,7 @@ spec:
       labels:
         severity: warning
       annotations:
-        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has been in pending status for more than 5 minutes'
+        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has been in pending status for more than 5 minutes.'
         summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in pending status'
     
     - alert: LedgerPodsError
@@ -43,5 +43,5 @@ spec:
       labels:
         severity: warning
       annotations:
-        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an Error for more than 1 minutes'
+        description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an Error for more than 1 minutes.'
         summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in error status'
