update helm and retest CI

--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -3,13 +3,13 @@ on:
   pull_request:
     branches:
       - master
-    paths:
-      - 'charts/stable/**'
+    # paths:
+    #   - 'charts/stable/**'
   push:
     branches:
       - master
-    paths:
-      - 'charts/stable/**'
+    # paths:
+    #   - 'charts/stable/**'
 jobs:
   lint-chart:
     runs-on: ubuntu-latest
