--- a/.github/kind-cluster.yaml
+++ b/.github/kind-cluster.yaml
@@ -3,5 +3,5 @@ apiVersion: kind.sigs.k8s.io/v1alpha3
 nodes:
 # the control plane node config
 - role: control-plane
-# the 2 workers
+# the workers
 - role: worker
