--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       matrix:
         k8s:
-          - v1.15.7
+          - v1.15.11
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -71,10 +71,14 @@ jobs:
           kubectl create secret docker-registry reg-docker-secrets --docker-server=https://index.docker.io/v2/ --docker-username=${{ secrets.DOCKERHUB_USER }} --docker-password=${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo update
-          helm upgrade --install cassandra --namespace default --set dbUser.user=cassandra --set dbUser.password=cassandra --set persistence.enabled=false bitnami/cassandra --version 5.1.2
+          kubectl create -f .github/cassandra.yaml
+          echo "Wait until cassandra is running" && sleep 100
+          kubectl create -f .github/scalardl-schema.yaml
+          echo "Wait until scalardl schema is completed" && sleep 60
+          kubectl get po,svc,node -o wide
 
       - name: Run chart-testing (install)
         uses: helm/chart-testing-action@v1.0.0-rc.2
         with:
-          command: install --all
+          command: "install --all"
           config: .github/ct.yaml
