don t check new version

--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,6 +1,6 @@
 # consider helm install to be failed after 10 minutes
 helm-extra-args: --timeout 300s
-check-version-increment: true
+check-version-increment: false
 debug: true
 chart-dirs:
   - charts/stable
