--- a/operation/manifests/prometheus/ledger-prometheus-rules.yaml
+++ b/operation/manifests/prometheus/ledger-prometheus-rules.yaml
@@ -16,7 +16,7 @@ spec:
       labels:
         severity: critical
       annotations:
-        summary: '{{$labels.deployment}}: has no replicas'
+        summary: '{{$labels.deployment}}: has no replicas.'
         description: 'deployment {{$labels.deployment}} has {{$value}} replicas.'
         
     - alert: LedgerDeploymentHasMissingReplicas
@@ -25,7 +25,7 @@ spec:
       labels:
         severity: warning
       annotations:
-        summary: '{{$labels.deployment}}: has insuficient replicas'
+        summary: '{{$labels.deployment}}: has insuficient replicas.'
         description: 'deployment {{$labels.deployment}} has {{$value}} replica(s) unavailable.'
     
     - alert: LedgerPodsPending
@@ -35,7 +35,7 @@ spec:
         severity: warning
       annotations:
         description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has been in pending status for more than 1 minute.'
-        summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in pending status'
+        summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in pending status.'
     
     - alert: LedgerPodsError
       expr: kube_pod_container_status_waiting_reason{namespace="default",reason!="ContainerCreating",pod=~"^scalar-ledger-.*"} > 0
@@ -44,4 +44,4 @@ spec:
         severity: warning
       annotations:
         description: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an error for more than 1 minute.'
-        summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} in error status'
+        summary: 'Pod {{$labels.pod}} in namespace {{$labels.namespace}} has an error status.'
