add envoy service monitor in helm charts

--- a/charts/stable/scalar-envoy/values.yaml
+++ b/charts/stable/scalar-envoy/values.yaml
@@ -68,6 +68,12 @@ service:
       # service.ports.envoy-priv.protocol -- envoy protocol
       protocol: TCP
 
+## ServiceMonitor consumed by prometheus-operator
+serviceMonitor:
+  enabled: true
+  interval: "15s"
+  namespace: monitoring
+
 # resources -- resources allowed to the pod
 resources: {}
   # limits:
